# public/docs/swagger/paths/payment/card-payment.yaml
@@ -46,7 +46,12 @@ post:
                     type: string
                   count:
                     type: integer
-              
+            amount:
+              type: integer
+              description: 상품 총 가격
+            product1_name: 
+              type: string
+              description: 첫 번째 상품의 상품 이름
           require:
             - customer_uid
             - delivery_address1
@@ -54,7 +59,10 @@ post:
             - phone
             - receiver
             - product
+            - amount
+            - product1_name
           example:
+            customer_uid: 'cd_209234092347234'
             delivery_address1: '인천광역시 남구'
             delivery_address2: '용현동 66-29'
             delivery_detail: '패밀리고시원 202호'
@@ -62,26 +70,12 @@ post:
             phone: '01051984332'
             receiver: '고성진'
             product: [{product_id: '02398402934a20942', count: 2}, {product_id: '209234234aa209348', count: 3}]
+            amount: 25000
+            product1_name: '제주삼다수, 500ml, 40개입'
   responses:
-    '201':
-      description: 회원가입 성공
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              status:
-                type: integer
-                example: 201
-              success:
-                type: boolean
-                example: true
-              message:
-                type: string
-                example: '회원가입 성공'
+    '200':
+      $ref: '../../components/responses.yaml#200-APPROVAL_SUCCESS'
     '400':
-      $ref: '../../components/responses.yaml#400-NULL_VALUE'
-    '400 ':
-      $ref: '../../components/responses.yaml#400-ALREADY_USER'
-    '500 ':
+      $ref: '../../components/responses.yaml#400-APPROVAL_FAIL'
+    '500':
       $ref: '../../components/responses.yaml#500-INTERNAL_SERVER_ERROR'
